# cosmic-explorer

./: .editorconfig  .env-example  .env.example  .eslintrc.json  .flake8  .gitignore  .pre-commit-config-disabled.yaml  .prettierrc.json  AUDIO_ENHANCEMENT_COMPLETE.md  CHANGELOG.md  CONTRIBUTING.md  DEBUG_FIX.md  FIX_SUMMARY.md  FOOD_CONSUMPTION_IMPLEMENTATION.md  FUN_AND_IMMERSION_PLAN.md  LICENSE  Makefile  POD_AUGMENTATION_SYSTEM.md  POD_MODS_DEBUG.js  POD_UI_IMPROVEMENTS.md  PROJECT_REVIEW_SUMMARY.md  QUICK_FIX.md  README.md  README_FINAL.md  README_GRAPHICAL.md  REFACTORING_STATUS.md  TEST_POD_AUGMENTATIONS.md  config.py  events.py  favicon_generator.html  game.py  generate_favicon.py  modal-load-issue-fix.md  navigation.py  package.json  pyproject.toml  regions.py  requirements-dev.txt  requirements.txt  save_manager.py  (+6 more)
.github/workflows-disabled/: ci.yml
api/: action_processor.py  app.py  app_backup.py  combat_system.py  inventory_system.py  pod_system.py  session_manager.py  ship_system.py
dev/: format.sh  lint.sh  setup.sh  test.sh
docs/: 2025-01-MUSIC-ENHANCEMENTS.md  2025-01-SOUND-SYSTEM-IMPROVEMENTS.md  ARCHITECTURE.md  CAMERA_CENTERING_FIX.md  HOUSEKEEPING_COMPLETE_JUNE_2025.md  HOUSEKEEPING_STATUS.md  INVENTORY_SYSTEM_COMPLETE.md  MUSIC_SYSTEM_IMPLEMENTATION.md  MUSIC_SYSTEM_TESTING_GUIDE.md  POD_FEATURE_COMPLETE.md  README.md  SOUND_ENHANCEMENT_SUMMARY.md  TELEMETRY_INTEGRATION_REPORT.md  TERMINAL_UI_DEPRECATED.md  VISUAL_EVENT_SYSTEM.md  WEB_UI_COMPLETE.md  modal-z-index-fix.md
docs/_templates/: adr-template.md
docs/architecture/: index.md  overview.md
docs/architecture/adrs/: 001-web-based-ui.md  index.md
docs/archive/: empty-choices-modal-fix.md  index.md
docs/archive/bug-fixes/: 2024-12-bug-fix-summary.md  2025-06-save-overwrite-fix.md  modal-exit-button-fix.md  save-load-fixes.md  save-load-modal-fix.md
docs/archive/feature-docs/: audio-enhancement-complete.md  (+2 more)
docs/assistants/: CLAUDE.md  CLAUDE_README.md  claude-opus-4-coding-assistant-instructions.md  claude-opus-4-quick-reference.md  claude-opus-4-tool-usage-examples.md  claude-settings.json  claude-settings.jsonc  index.md
docs/components/: index.md
docs/guides/: index.md
docs/references/: development-priorities.md  project-analysis.md  roadmap.md
saves/: README.md
static/css/: game.css
static/js/: audio.js  combat.js  config.js  game.js  gameEngine.js  gameInit.js  main.js  musicEngine.js  particles.js  podMods.js  renderer.js  ui-loader.js  ui.js
static/sounds/: .gitkeep  README.md
templates/: index.html
tests/: __init__.py  test_api.py  test_game.py  test_save_load.py
tools/: README.md  create_favicon.sh  modal_debug_helper.js  music_debug_helper.js
(+110 files in other folders)
